fix: :art: Repared the collapse with navBar

--- a/src/Styles/Hero.css
+++ b/src/Styles/Hero.css
@@ -1,5 +1,4 @@
 .hero{
-    margin-top: 60px;
     /* background-color: #f5f6f7; */
     min-height: 450px;
     text-align: center;
